2008-06-21	Jannis Pohlmann <jannis@xfce.org>

	* icons/: Add volume level icons (1x muted, 5x different sound
	  wave icons). I'm not exactly satisfied, but it's better than
	  before.
	* libxfce4mixer/xfce-mixer-stock.{c,h}: Add support for the
	  icons mentioned above.
	* panel-plugin/xfce-mixer-plugin.c, 
	  panel-plugin/xfce-volume-button.c,
	  panel-plugin/xfce-plugin-dialog.c: (Hopefully) improve icon
	  scaling. Make sure (I guess) not to crash when the properties
	  dialog returns crap (why would it? heck, what do I know?).

2008-06-21	Jannis Pohlmann <jannis@xfce.org>

	* libxfce4mixer/xfce-mixer-track-combo.c: Fix a wrong 
	  if-statement in xfce_mixer_track_combo_set_track(). Now the
	  current mixer track should be preselected correctly when
	  opening the properties dialog of the plugin.

2008-06-21	Jannis Pohlmann <jannis@xfce.org>

	* panel-plugin/xfce-volume-button.c: Fix the button press
	  callback: Return TRUE when the middle button was pressed, 
	  return FALSE otherwise.

2008-06-21	Jannis Pohlmann <jannis@xfce.org>

	* panel-plugin/xfce-volume-button.c: Add support for toggling
	  between minimum and last known volume using the middle 
	  mouse button.

2008-06-21	Jannis Pohlmann <jannis@xfce.org>

	* panel-plugin/xfce-volume-button.c: Add support for GDK_Home
	  and GDK_End for changing the volume to the maximum/minimum
	  level.

2008-06-21	Jannis Pohlmann <jannis@xfce.org>

	* libxfce4mixer/Makefile.am, 
	  libxfce4mixer/xfce-mixer-card-combo.{c,h},
	  libxfce4mixer/xfce-mixer-track-combo.{c,h}, 
	  libxfce4mixer/xfce-mixer-utilities.{c,h}:
	  Add subclasses of GtkComboBox for unified selection of 
	  sound cards and mixer tracks. Add convenience functions for
	  getting a list of available sound cards and getting sound
	  cards by name. 
	* panel-plugin/Makefile.am,
	  panel-plugin/xfce-mixer-plugin.{c,h},
	  panel-plugin/xfce-plugin-dialog.{c,h},
	  panel-plugin/xfce-volume-button.{c,h}: